# treasury-trove

./: .gitignore  CNAME  EventService.sln  Program.cs  README  README.md  TreasureTrove.sln  TreasuryTrove.sln  api.yaml  infra.dockerfile
.github/workflows/: cicd.yaml  deploy.yaml  deploy_ui.yaml  docker-publish.yml  tf_apply.yaml  tf_plan.yaml
AuthenticationService/: AuthenticationService.csproj  AuthenticationService.http  Program.cs  appsettings.json  file.txt
AuthenticationService/Data/: AppDbContext.cs
AuthenticationService/Migrations/: 20250521211832_InitialCreate.Designer.cs  20250521211832_InitialCreate.cs  20250522081154_InitialCreate.Designer.cs  20250522081154_InitialCreate.cs  AppDbContextModelSnapshot.cs
EventService/: EventManagement.db  EventService.csproj  Program.cs  appsettings.json
ExportService/: ExportService.csproj  ExportService.http  Program.cs  appsettings.json
TransactionService/: Program.cs  TransactionService.csproj  TransactionService.http  WeatherForecast.cs
api/: .dockerignore  Dockerfile  main.py  pyproject.toml
api/dependencies/: auth.py  database.py
api/domain/: db_utils.py  exceptions.py  organisation.py
api/models/: base.py  public.py  schemas.py
api/repositories/: client_postgres.py  client_sqllite.py  database.py
api/routers/: events.py  organisations.py  transactions.py
client/: .gitignore  package-lock.json  package.json
client/src/: App.js  (+3 more)
infra/: README.md  backend.tf  locals.tf  main.tf  outputs.tf  provider.tf  variables.tf
treasury-trove-ui/: .gitignore  README.md  package-lock.json  package.json
(+121 files in other folders)
